--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@master
       - name: Build
         run: |
-          cd Texstyle
-          xcodebuild clean build -project Texstyle.xcodeproj -scheme Texstyle -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          cd doubleH3lix
+          make
         env: 
          destination: ${{ matrix.destination }}
