--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,6 @@ jobs:
         uses: actions/checkout@master
       - name: Build
         run:
-          ls
+          make
         env: 
          destination: ${{ matrix.destination }}
